--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -75,6 +75,9 @@
         force: true
         path: zshrc
     ~/.oh-my-zsh/custom/custom-ls.zsh: oh-my-zsh/custom/custom-ls.zsh
+    ~/.gitconfig:
+        force: true
+        path: gitconfig
 
 - shell:
     - git submodule sync --recursive
